add gem doorkeper and authorized for courses and fix reset_sequences
