# app/controllers/concerns/error_handler.rb
@@ -7,7 +7,8 @@ module ErrorHandler
     rescue_from ActiveRecord::RecordNotFound, with: :record_not_found
     rescue_from ActionController::ParameterMissing, with: :handle_bad_request
     rescue_from ActiveRecord::RecordInvalid, with: :handle_validation_error
-    rescue_from StandardError, with: :handle_server_error unless Rails.env.development? || Rails.env.test?
+    rescue_from StandardError, with: :handle_server_error if Rails.env.production?
+    rescue_from Doorkeeper::Errors::DoorkeeperError, with: :handle_unauthorized_access
   end
 
   private
@@ -20,37 +21,46 @@ module ErrorHandler
   def record_not_found(exception)
     render_error(
       :not_found,
-      { code: :not_found, message: exception.message }
+      error_payload(:not_found, exception.message)
     )
   end
 
   def handle_bad_request(exception)
     render_error(
       :bad_request,
-      {
-        code: :bad_request,
-        message: "Missing or empty parameter: #{exception.param}"
-      }
+      error_payload(:bad_request, "Missing or empty parameter: #{exception.param}")
     )
   end
 
   def handle_validation_error(exception)
     render_error(
       :unprocessable_entity,
-      {
-        code: :unprocessable_entity,
-        message: exception.record.errors.full_messages.join(', ')
-      }
+      error_payload(:unprocessable_entity, exception.record.errors.full_messages.join(', '))
     )
   end
 
   def handle_server_error(_exception)
     render_error(
       :internal_server_error,
-      {
-        code: :internal_server_error,
-        message: 'Something went wrong on our end'
-      }
+      error_payload(:internal_server_error, 'Something went wrong on our end')
     )
+  end
+
+  def handle_unauthorized_access(exception)
+    render_error(
+      :unauthorized,
+      error_payload(:unauthorized, exception.message)
+    )
+  end
+
+  def handle_forbidden_access
+    render_error(
+      :forbidden,
+      error_payload(:forbidden, 'You are not authorized to perform this action')
+    )
+  end
+
+  def error_payload(code, message)
+    { code: code, message: message }
   end
 end
